--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@ html
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+  <style>
+    body {
+      background-image: url('images/background.jpg');
+      background-size: cover;        /* Makes the image cover the whole screen */
+      background-position: center;   /* Centers the image */
+      background-repeat: no-repeat;  /* Prevents the image from repeating */
+    }
+  </style>
+</head>
+    <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
     <title>Memoriwall</title>
     <style>
         body {
