--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ html
     <head>
   <style>
     body {
-      background-image: url('images/background.jpg');
+      background-image: url('main/aurora.jpg');
       background-size: cover;        /* Makes the image cover the whole screen */
       background-position: center;   /* Centers the image */
       background-repeat: no-repeat;  /* Prevents the image from repeating */
