--- a/index.html
+++ b/index.html
@@ -1,27 +1,18 @@
-html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <head>
-  <style>
-    body {
-      background-image: url('https://github.com/veltr1x/memoriwall/blob/main/aurora.jpg');
-      background-size: cover;        /* Makes the image cover the whole screen */
-      background-position: center;   /* Centers the image */
-      background-repeat: no-repeat;  /* Prevents the image from repeating */
-    }
-  </style>
-</head>
-    <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
     <title>Memoriwall</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            background-image: url('aurora.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         h1 {
             color: #333;
@@ -71,8 +62,6 @@ html
 
         saveButton.addEventListener('click', function() {
             const aiNames = inputBox.value;
-            // Here you can add code to save the AI names to the webpage
-            // For example, append them to an existing list or update a database
             alert('Saved! Thank you for remembering.');
         });
     </script>
